roles/Addons/templates/dashboard/4.Service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: dashboard-tls
      port: 443
      targetPort: 8443
      nodePort: 30000
      protocol: TCP
  selector:
    k8s-app: kubernetes-dashboard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-web-ui
  namespace: kube-system
spec:
  rules:
  - host: dashboard.minikube
    https:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: dashboard-tls
