roles/Addons/templates/dashboard/6.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
spec:
  rules:
    - host: dashboard.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: dashboard-tls
